# cgotpl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmp.sh
.github/workflows/: checks.yaml  release.yaml
cli/: CMakeLists.txt  main.c
fuzz/: CMakeLists.txt  json.c  json.dict  template.c  template.dict
go/: CMakeLists.txt  go.mod  main.go
include/: encode.h  func.h  json.h  map.h  stream.h  template.h  version.h.in
jsontest/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  encode.c  encode.h  func.c  json.c  json.h  map.c  map.h  stream.c  stream.h  template.c  template.h
test/: CMakeLists.txt  json.c  map.c  stream.c  template.c  test.h
